securitygr.tf

# Create Security Group for Web Servers
resource "aws_security_group" "web" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "WebSecurityGroup"
  }

  // Define security group rules for web servers
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create Security Group for Database Servers
resource "aws_security_group" "db" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "DBSecurityGroup"
  }

  // Define security group rules for database servers
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.web.id]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.web.id]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.web.id]
  }
}

# Create Security Group for Application Servers
resource "aws_security_group" "app" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "AppSecurityGroup"
  }

  // Define security group rules for application servers

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.web.id]
  }
  
  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.web.id]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.db.id]
  }
}
